--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!--MAIN MESSAGE-->
     <div class="content">
-    <h1 class = "tittle">Hello, I'm <span class="name">Walter Palacios.<br></span><span class="secondPart">I'm a front-end developer.</span></h1>
+    <h1 class = "title">Hello, I'm <span class="name">Walter Palacios.<br></span><span class="secondPart">I'm a front-end developer.</span></h1>
     
 
     <!--BUTTON-->
