--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!--BUTTON-->
     <div class ="button-area">
-        <button class = "view-work"><a href="portafolio.html" target="_blank"> View my work <i class="fa-solid fa-arrow-right fa-beat-fade"></i></a></button>
+        <button class = "view-work"><a href="https://waltercoder.github.io/Portafolio/" target="_blank"> View my work <i class="fa-solid fa-arrow-right fa-beat-fade"></i></a></button>
        
     </div>
 </div>
